[package]
name = "yew-feather"
version = "0.1.2"
authors = ["Pedro Ferreira <me.pedro.ferreira@gmail.com>"]
edition = "2018"
description = "Yew components for Feather icons"
license = "MIT"
readme = "./README.md"
repository = "https://github.com/pedrodesu/yew-feather.git"
homepage = "https://github.com/pedrodesu/yew-feather"
documentation = "https://github.com/pedrodesu/yew-feather"
include = [
    "src/*",
    "Cargo.toml"
]

[dependencies]
yew = "0.18.0"